Fixed bug with '100vh' on mobiles (set '100dvh' instead)

--- a/assets/style/glStyle/glStyle.scss
+++ b/assets/style/glStyle/glStyle.scss
@@ -7,7 +7,7 @@ body {
 .global-container {
   width: 100%;
   margin: 0 auto;
-  min-height: 100vh;
+  min-height: 100dvh;
   padding: 15px 30px;
   @media (max-width: $tablet-l) {
     padding: 10px;
@@ -214,7 +214,7 @@ body {
 .edit-form-wrapper {
   position: fixed;
   min-width: 100vw;
-  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
